[tool.poetry]
name = "test-python-command"
version = "0.1.0"
description = ""
authors = ["Shawn Lee <san.an.lee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"

[tool.poetry.scripts]
test-python-command = "test_python_command.__init__:hello"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
